# Hunyuan3D-2.1

./: pyproject.toml  requirements-5090.txt  requirements.txt
docs/: finetune-4090-guide.md
hy3dshape/: export_inference_only.py  main.py  minimal_demo.py  minimal_demo_with_ckpt.py  minimal_demo_with_single_ckpt.py  train_demo.sh  train_sem.sh
hy3dshape/configs/: hunyuandit-finetuning-4090-24gb-sem.yaml  hunyuandit-finetuning-4090-24gb.yaml  hunyuandit-mini-overfitting-flowmatching-dinol518-bf16-lr1e4-4096.yaml
hy3dshape/demos/sem/: preprocess_sem_data.py
hy3dshape/demos/sem/testset/: images.json
hy3dshape/demos/sem/trainset/preprocessed/01a4cff37043361068376104a292f5b44b5eacbd174651553b6a7ae35647a2a6/geo_data/: 01a4cff37043361068376104a292f5b44b5eacbd174651553b6a7ae35647a2a6_surface.npz
hy3dshape/demos/sem/trainset/preprocessed/01a4cff37043361068376104a292f5b44b5eacbd174651553b6a7ae35647a2a6/render_cond/: mesh.ply  transforms.json
hy3dshape/hy3dshape/: pipelines.py
hy3dshape/hy3dshape/data/: dit_asl.py
hy3dshape/hy3dshape/models/autoencoders/: attention_blocks.py  model.py  surface_extractors.py
hy3dshape/hy3dshape/models/denoisers/: hunyuandit.py
hy3dshape/tools/watertight/: watertight_and_sample.py
